:bug: fix(OptimizedPriceChangeScheduled): manual tx management